2012-01-09  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.cc (thread_wrapper): Make sure stack is 16 byte aligned
	to make gcc-3 compiled pthread applications happy.

2012-01-08  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dtable.cc (dtable::stdio_init): Always initialize console when we
	have one.
	* fhandler_termios.cc (fhandler_termios::tcsetpgrp): Use a better
	method to print tty name for debugging.
	(fhandler_termios::bg_check): Ditto.
	* pinfo.cc (_pinfo::set_ctty): Remove leftover debugging stuff.
	Simplify behavior when setting tty's sid and pgid to avoid overwriting
	previously set values.

	* spawn.cc (ch_spawn): Cosmetic change.

2012-01-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (pthread_sigqueue): Export.
	* posix.sgml (std-gnu): Add pthread_sigqueue.
	* thread.cc (pthread_sigqueue): New function.
	* include/thread.h (pthread_sigqueue): New function.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2012-01-02  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* path.cc (get_current_dir_name): Avoid memory leak.  Don't return PWD
	contents if directory doesn't actually exist.

2012-01-01  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (get_current_dir_name): Export.
	* path.cc (get_current_dir_name): New function.
	* posix.sgml (std-gnu): Add get_current_dir_name.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.