@@ -1,7 +1,7 @@
 /* syscalls.cc: syscalls
 
    Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-   2005, 2006, 2007, 2008, 2009, 2010, 2011 Red Hat, Inc.
+   2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012 Red Hat, Inc.
 
 This file is part of Cygwin.
 
@@ -31,7 +31,7 @@ details. */
 #include <sys/statvfs.h> /* needed for statvfs */
 #include <stdlib.h>
 #include <stdio.h>
-#include <process.h>
+#include <cygwin/process.h>
 #include <utmp.h>
 #include <utmpx.h>
 #include <sys/uio.h>
